@@ -144,9 +144,56 @@ switch ($op) {
         $registrationDatecreatedObj = \DateTime::createFromFormat(\_SHORTDATESTRING, Request::getString('datecreated'));
         $registrationObj->setVar('datecreated', $registrationDatecreatedObj->getTimestamp());
         $registrationObj->setVar('submitter', Request::getInt('submitter'));
+        $answersValueArr = [];
+        $answersIdArr = Request::getArray('ans_id');
+        $answersTypeArr = Request::getArray('type');
         // Insert Data
         if ($registrationHandler->insert($registrationObj)) {
             $newRegId = $registrationObj->getNewInsertedId();
+            if ($regId > 0) {
+                // create copy before deleting
+                // get all questions for this event
+                $questionsArr = $questionHandler->getQuestionsByEvent($regEvid);
+                // get old answers for this questions
+                $answersOld = $answerHandler->getAnswersDetailsByRegistration($newRegId, $questionsArr);
+                // delete all existing answers
+                $answerHandler->cleanupAnswers($regEvid, $regId);
+            }
+            // get all questions
+            if (\count($answersIdArr) > 0) {
+                foreach (\array_keys($answersIdArr) as $queId) {
+                    $answer = '';
+                    if (Request::hasVar('ans_id_' . $queId) && '' !== Request::getString('ans_id_' . $queId)) {
+                        switch ($answersTypeArr[$queId]) {
+                            case Constants::FIELD_CHECKBOX:
+                            case Constants::FIELD_COMBOBOX:
+                                $answer = serialize(Request::getArray('ans_id_' . $queId));
+                                break;
+                            case Constants::FIELD_SELECTBOX: //selectbox expect/gives single value, but stored as array
+                                $answer = serialize(Request::getString('ans_id_' . $queId));
+                                break;
+                            default:
+                                $answer = Request::getString('ans_id_' . $queId);
+                                break;
+                        }
+                        $answersValueArr[$queId] = $answer;
+                    }
+                }
+            }
+            // create items in table answers
+            foreach ($answersValueArr as $key => $answer) {
+                if ('' != $answer) {
+                    $answerObj = $answerHandler->create();
+                    $answerObj->setVar('regid', $newRegId);
+                    $answerObj->setVar('queid', $key);
+                    $answerObj->setVar('evid', $regEvid);
+                    $answerObj->setVar('text', $answer);
+                    $answerObj->setVar('datecreated', \time());
+                    $answerObj->setVar('submitter', $regSubmitter);
+                    // Insert Data
+                    $answerHandler->insert($answerObj);
+                }
+            }
             $permId = isset($_REQUEST['id']) ? $regId : $newRegId;
             $grouppermHandler = \xoops_getHandler('groupperm');
             $mid = $GLOBALS['xoopsModule']->getVar('mid');
