@@ -147,13 +147,11 @@ class FormelementsHandler extends \XoopsPersistableObjectHandler
                 break;
             case Constants::FIELD_SELECTBOX:
                 $field = new \XoopsFormSelect($this->caption, $this->name, $this->value);
-                //$field->addOption('');
                 $field->addOptionArray($this->optionsArr);
                 $field->setDescription($this->desc);
                 break;
             case Constants::FIELD_COMBOBOX:
                 $field = new \XoopsFormSelect($this->caption, $this->name, $this->value, 5, true);
-                //$field->addOption('');
                 $field->addOptionArray($this->optionsArr);
                 $field->setDescription($this->desc);
                 break;
