@@ -11,6 +11,8 @@
  - added goto form in simplecalendar (goffy)
  - fixed bug with missing limit (goffy)
  - fixed bug with groups on index page (goffy)
+ - fixed bug in none working "required" for custom question (goffy)
+ - fixed bug with multiple checkboxes (goffy)
 
 ==============================================================
 1.0.3 RC1 [2022/07/10]
